# sample

./: pyproject.toml
sample-app/: README.md  app_controller.py  requirements.txt
sample-app-blacksheep/: app_controller.py  app_module.py  main.py
sample-app-dynamic-module/: app_module.py  app_service.py
sample-app-dynamic-module/src/config/: config_module.py  config_service.py
sample-app-dynamic-module/src/config2/: builder.py  config2_module.py  config2_service.py
sample-app-dynamic-module/src/user/: user_controller.py  user_module.py  user_service.py
sample-app-exceptions/: app_controller.py  main.py
sample-app-exceptions/exception/: badrequest_filter.py  global_filter.py
sample-app-graphql/: app_controller.py  app_module.py  main.py
sample-app-graphql/src/user/: user_input.py  user_module.py  user_resolver.py  user_service.py
sample-app-guards/: app_controller.py  app_module.py  main.py
sample-app-guards/src/auth/: auth_controller.py  auth_dto.py  auth_module.py  auth_service.py
sample-app-interceptors/: app_controller.py  app_module.py  main.py
sample-app-interceptors/interceptor/: test.py
sample-app-middleware/: app_controller.py  app_middleware.py  app_module.py  main.py
sample-app-providers/: README.md  app_controller.py  app_module.py  app_service.py  main.py
sample-app-request-params/: app_controller.py  app_module.py  app_service.py  main.py
sample-app-socket-io/: README.md  app_controller.py  app_gateway.py  app_module.py  main.py  user_gateway.py
sample-app-socket-io/views/: index.html
(+23 files in other folders)
